...
            "state" : "translated",
            "value" : "使用全域時間"
          }
        }
      }
    },
    "例如：朋友" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "e.g. Friends"
...
            "state" : "translated",
            "value" : "例如：朋友"
          }
        }
      }
    },
    "保存" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
...
            "state" : "translated",
            "value" : "新分類"
          }
        }
      }
    },
    "新建分类" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Category"
...
            "state" : "translated",
            "value" : "過往日子的年度回憶，遵循公曆或農曆"
          }
        }
      }
    },
    "返回" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
...
